# MotherInLaw

./: CMakeLists.txt  export.cpp  filename.cpp  filename.h  filename_test.cpp  imageclass.cpp  imageclass.h  imageclass_test.cpp  import.cpp  main.cpp  mathcalculate.cpp  mathcalculate.h
.github/workflows/: cmake.yml
